--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Melissa's Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -14,6 +14,17 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <nav>
+
+  </nav>
+  <header>
+
+  </header>
+  <div class="main">
+
+  </div>
+  <footer>
+    
+  </footer>
 </body>
 </html>
