--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
   <nav>
-
+    <a href="index.html">Resume</a>
+    <a href="http://navyladyveteran.com" target="_blank">Portfolio Site</a>
+    <a href="http://navyladyveteran.com/contact.html" target="_blank">Contact</a>
   </nav>
   <header>
 
@@ -24,7 +26,7 @@
 
   </div>
   <footer>
-    
+
   </footer>
 </body>
 </html>
