--- a/index.html
+++ b/index.html
@@ -14,19 +14,34 @@
 </head>
 
 <body>
+
+<!--Navigation-->
   <nav>
     <a href="index.html">Resume</a>
     <a href="http://navyladyveteran.com" target="_blank">Portfolio Site</a>
     <a href="http://navyladyveteran.com/contact.html" target="_blank">Contact</a>
+    <a href="http://navyladyveteran.com/links.html" target="_blank">Live Sites</a>
   </nav>
+
+<!--Intro-->
   <header>
 
   </header>
-  <div class="main">
+
+<!--Skills-->
+  <div class="skills">
 
   </div>
-  <footer>
 
+<!--Work History-->
+  <div class="work">
+    
+  </div>
+
+<!--Footer and Contact-->
+  <footer>
+    <p>Updated: 2/2020</p>
+    <p>&copy; 2020 | <a href="mailto:melissalongenberger24@gmail.com">Email Melissa</a></p>
   </footer>
 </body>
 </html>
