--- a/github.html
+++ b/github.html
@@ -27,10 +27,11 @@
   </nav>
   <div class="main">
 <!--Heading-->
-    <header class="center">
+    <div class="heading center">
+      <h1>Github Repository Links</h1>
+      <p>Some links in Github to coding projects that I have completed or am working on.</p>
       
-      
-    </header>
+    </div>
 
 <!--Links-->
     <div class="skills">
