--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <!--Skills-->
     <div class="section center">
-      <h1>My Skills</h1>
+      <h1>Skills</h1>
       <div class="ul">
         <ul class="list">
           <li>HTML5</li>
@@ -51,7 +51,21 @@
 <!--Work History-->
     <div class="section">
       <h1>Work History</h1>
-      
+      <ul class="list">
+        <li><b>2018-Present</b> - Freelance Website Developmemt</li>
+        <li><b>2017-2019</b> - Universal Technition for Web.com</li>
+        <li><b>1998-2009</b> - US Navy</li>
+      </ul>
+    </div>
+
+ <!--Work History-->
+    <div class="section">
+      <h1>Education</h1>
+      <ul class="list">
+        <li><b>2020-Present</b> - Lambfa - Full Stack Web Development Program</li>
+        <li><b>2019-Present</b> - NexGenT - Zero to Engineer Program</li>
+        <li><b>2012-2014</b> - Dutchess Community College - AS in Business Administration</li>
+      </ul>
     </div>
 
 <!--Footer and Contact-->
