--- a/github.html
+++ b/github.html
@@ -20,8 +20,8 @@
     <p>Melissa Longenberger</p>
     <img src="images/melissa.jpg" alt="Melissa">
     <a href="index.html">Resume</a>
-    <a href="github.html">GitHub Repo Links</a>
-    <a href="http://navyladyveteran.com" target="_blank">Portfolio Site</a>
+    <a href="github.html">GitHub</a>
+    <a href="http://navyladyveteran.com" target="_blank">Portfolio</a>
     <a href="http://navyladyveteran.com/contact.html" target="_blank">Contact</a>
     <a href="http://navyladyveteran.com/links.html" target="_blank">Live Sites</a>
   </nav>
@@ -37,12 +37,20 @@
         <ul class="gitlist">
             <li><b>My Code Pens</b></li>
             <li>A Repository of CodePen Projects</li>
-            <li><a href="https://github.com/melissa-24/MyCodePens/blob/master/unit1pens.html"><img src="images/codepen.png" alt="codepen repo code"></a></li>
+            <li><a href="https://github.com/melissa-24/MyCodePens/blob/master/unit1pens.html"><img src="images/codepen.png" alt="codepen repo code"><p>Repository link</p></a></li>
+
+            <li><b>Responsive Web Design</b></li>
+            <li>A Responsive Project</li>
+            <li><a href="https://github.com/melissa-24/responsive-web-design-I"><img src="images/responsive.png" alt="codepen repo code"><p>Repository link</p></a></li>
         </ul>
         <ul class="gitlist">
-            <li><b>My Code Pens</b></li>
-            <li>A Repository of CodePen Projects</li>
-            <li><a href="https://github.com/melissa-24/MyCodePens/blob/master/unit1pens.html"><img src="images/codepen.png" alt="codepen repo code"></a></li>
+            <li><b>My Portfolio Site</b></li>
+            <li>A Portfolio Project</li>
+            <li><a href="https://github.com/melissa-24/melissa-24.github.io"><img src="images/portfolio.png" alt="codepen repo code"><p>Repository link</p></a></li>
+
+            <li><b>Sprint Challenge</b></li>
+            <li>1st Lambda Sprint Challenge</li>
+            <li><a href="https://github.com/melissa-24/Sprint-Challenge--User-Interface"><img src="images/sprint.png"><p>Respoitory link</p></a></li>
         </ul>
        
     
